--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -75,8 +75,6 @@ input:is([type="checkbox"],[type="radio"]){
 }
 
 /* states */
-/* ::selection{} */
-
 :disabled{
   cursor:not-allowed;
   pointer-events:auto;
@@ -93,3 +91,34 @@ button,a,input,textarea,select{
     outline-color:var(--outline-focus-color);
   }
 }
+
+::-webkit-scrollbar{
+  width:0.5rem;
+  height:0.5rem;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color:var(--scrollbar-color);
+  border-radius:var(--rounded-full);
+}
+
+::-webkit-scrollbar-track{background:transparent;}
+::-webkit-scrollbar-corner{display:none;}
+
+a{
+  text-decoration-line:underline;
+  text-decoration-style:dashed;
+  text-underline-offset:0.2rem;
+  text-decoration-thickness:1px;
+  color:var(--link-color);
+  transition-duration:var(--duration-default);
+  transition-property:outline-color,color;
+
+  @media (hover: hover){
+    &:hover{color:var(--link-color-hover);}
+  }
+
+  &:active{color:var(--link-color-active);}
+}
+
+/* ::selection{} */
