--- a/ui/styles/components.css
+++ b/ui/styles/components.css
@@ -1,4 +1,5 @@
 @import '../components/button/button.css';
+@import '../components/link/link.css';
 @import '../components/accordion/accordion.css';
 @import '../components/alert/alert.css';
 @import '../components/breadcrumb/breadcrumb.css';
