--- a/ui/styles/color-schemes/light.css
+++ b/ui/styles/color-schemes/light.css
@@ -1,16 +1,16 @@
-:root[data-mode='light']{
+:root[data-color-scheme='light']{
   /* backgrounds */
-  --bg-primary:oklch(98% 0 0);
+  --bg-primary-color:oklch(97% 0 0);
 
   /* foregrounds */
-  --fg-primary:oklch(0% 0 0);
-  --fg-secondary:oklch(58% 0 0);
-  --fg-tertiary:oklch(68% 0 0);
+  --fg-primary-color:oklch(14% 0 0);
+  --fg-secondary-color:oklch(36% 0 0);
+  --fg-tertiary-color:oklch(46% 0 0);
 
   /* link */
-  --link-color:var(--color-blue-700);
+  --link-color:oklch(45% 0.15 245);
   --link-color-hover:oklch(from var(--link-color) calc(l + 0.05) c h);
-  --link-color-active:oklch(from var(--link-color) calc(l - 0.05) c h);
+  --link-color-active:oklch(from var(--link-color) calc(l - 0.03) c h);
 
   /* surface */
   --surface-bg:var(--color-neutral-200);
@@ -38,4 +38,7 @@
 
   /* scrollbar */
   --scrollbar-color:var(--color-neutral-300);
+
+  /* selection */
+  --selection-color:oklch(0% 0 0 / 0.1);
 }
