--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -1,12 +1,4 @@
 :root{
-  /* heights */
-  --height-x-small:1.5rem;
-  --height-small:2rem;
-  --height-medium:2.5rem;
-  --height-large:3rem;
-  --height-x-large:3.5rem;
-  --height-default:var(--height-medium);
-
   /* sizes */
   --size-3x-small:1rem;
   --size-2x-small:1.25rem;
@@ -18,10 +10,18 @@
   --size-2x-large:4rem;
   --size-3x-large:4.5rem;
 
-  /* control sizes */
-  --toggle-size-small:1rem;
-  --toggle-size-medium:1.25rem;
-  --toggle-size-large:1.5rem;
+  /* checkbox | switch | radio */
+  --control-choice-small:1rem;
+  --control-choice-medium:1.25rem;
+  --control-choice-large:1.5rem;
+
+  /* button */
+  --control-action-small:2rem;
+  --control-action-medium:2.5rem;
+  --control-action-large:3rem;
+  --control-action-font-size-small:0.875rem;
+  --control-action-font-size-medium:1rem;
+  --control-action-font-size-large:1.125rem;
 
   /* padding */
   --padding-x-small:0.5rem;
@@ -29,15 +29,13 @@
   --padding-medium:1rem;
   --padding-large:1.25rem;
   --padding-x-large:1.5rem;
-  --padding-default:var(--padding-medium);
 
   /* icon sizes */
-  --icon-size-x-small:1rem;
-  --icon-size-small:1.125rem;
-  --icon-size-medium:1.25rem;
-  --icon-size-large:1.375rem;
-  --icon-size-x-large:1.5rem;
-  --icon-size-default:var(--icon-size-medium);
+  --icon-x-small:1rem;
+  --icon-small:1.125rem;
+  --icon-medium:1.25rem;
+  --icon-large:1.375rem;
+  --icon-x-large:1.5rem;
 
   /* rounded */
   --rounded-base:0.5rem;
@@ -54,42 +52,177 @@
   --outline-focus-width:2px;
   --outline-focus-style:solid;
   --outline-focus-offset:2px;
+
+  --cursor-default:default;
+  --cursor-disabled:not-allowed;
+  --cursor-action:pointer;
 }
 
 [data-rounded="full"]{border-radius:var(--rounded-full);}
 [data-rounded="none"]{border-radius:var(--rounded-none);}
 
-[data-border]{
-  content:'';
-  position:absolute;
-  inset:0;
-  pointer-events:none;
-  border-radius:inherit;
-  border-width:1px;
-  border-style:solid;
+*,::before,::after{box-sizing:border-box;}
+
+html,body{
+  margin:0;
+  padding:0;
 }
 
-select,label,
-input:is([type="checkbox"],[type="radio"]){
+body{
+  font-family:var(--font-family-default);
+  font-size:var(--font-size-default);
+  font-weight:var(--font-weight-normal);
+  font-style:var(--font-style-normal);
+  line-height:var(--line-height-default);
+}
+
+h1,h2,h3,h4,h5,h6{
+  margin:0;
+  color:var(--heading-color);
+  font-family:var(--font-family-heading);
+  font-style:var(--font-style-normal);
+}
+
+h1,h2,h3{font-weight:var(--font-weight-semibold);}
+h4,h5,h6{font-weight:var(--font-weight-medium);}
+
+h1{
+  font-size:calc(2.25rem * var(--scaling));
+  line-height:1.1;
+}
+
+h2{
+  font-size:calc(1.75rem * var(--scaling));
+  line-height:1.15;
+}
+
+h3{
+  font-size:calc(1.5rem * var(--scaling));
+  line-height:1.2;
+}
+
+h4{
+  font-size:calc(1.25rem * var(--scaling));
+  line-height:1.25;
+}
+
+h5{
+  font-size:calc(1.125rem * var(--scaling));
+  line-height:1.3;
+}
+
+h6{
+  font-size:calc(1rem * var(--scaling));
+  line-height:1.35;
+}
+
+p{
+  margin:0;
+  padding:0;
+}
+
+pre,code{
+  tab-size:var(--tab-size-default);
+}
+
+pre{
+  margin:0;
+  padding:0;
+}
+
+code{
+  font-family:var(--font-family-code);
+  font-weight:var(--font-weight-normal);
+  font-style:var(--font-style-normal);
+  white-space:pre-wrap;
+  word-break:break-word;
+}
+
+table{
+  width:100%;
+  border:none;
+  border-collapse:collapse;
+  border-spacing:0;
+  text-align:left;
+  vertical-align:top;
+}
+
+strong{
+  font-weight:var(--font-weight-bold);
+  font-style:inherit;
+}
+
+em{
+  font-style:var(--font-style-italic);
+}
+
+u{
+  text-decoration-line:underline;
+  text-underline-offset:var(--text-underline-offset-default);
+}
+
+s{
+  text-decoration-line:line-through;
+}
+
+blockquote{
+  margin-block:1rem;
+  padding:1rem;
+  font-style:var(--font-style-italic);
+}
+
+ul,ol{
+  padding:0;
+  margin-block:1rem;
+  padding-inline-start:2rem;
+}
+
+dl,dt,dd{
+  margin:0;
+  padding:0;
+}
+
+input[type="radio"]{
+  appearance:none;
+  margin:0;
+  padding:0;
+  background:none;
+  border:none;
+  cursor:pointer;
+  user-select:none;
+  touch-action:manipulation;
+}
+
+summary{
+  touch-action:manipulation;
+}
+
+select{
   cursor:pointer;
 }
 
-/* states */
-:disabled{
-  cursor:not-allowed;
-  pointer-events:auto;
+label{
+  display:flex;
+  column-gap:1rem;
+  cursor:pointer;
+
+  &[for]{
+    touch-action:manipulation;
+    -webkit-tap-highlight-color:transparent;
+  }
 }
 
-/* outline */
-button,a,input,textarea,select{
-  outline-width:var(--outline-focus-width);
-  outline-style:var(--outline-focus-style);
-  outline-offset:var(--outline-focus-offset);
-  outline-color:transparent;
+img,picture,video,canvas,svg,iframe{
+  display:block;
+  max-width:100%;
+}
 
-  &:focus-visible{
-    outline-color:var(--outline-focus-color);
-  }
+img,picture,video{height:auto;}
+iframe{width:100%;border:none;}
+
+figure{
+  margin:0;
+  padding:0;
 }
 
 ::-webkit-scrollbar{
@@ -105,20 +238,20 @@ button,a,input,textarea,select{
 ::-webkit-scrollbar-track{background:transparent;}
 ::-webkit-scrollbar-corner{display:none;}
 
-a{
-  text-decoration-line:underline;
-  text-decoration-style:dashed;
-  text-underline-offset:0.2rem;
-  text-decoration-thickness:1px;
-  color:var(--link-color);
-  transition-duration:var(--duration-default);
-  transition-property:outline-color,color;
-
-  @media (hover: hover){
-    &:hover{color:var(--link-color-hover);}
-  }
-
-  &:active{color:var(--link-color-active);}
+:disabled{
+  cursor:not-allowed;
+  pointer-events:auto;
 }
 
-/* ::selection{} */
+::selection{
+  background-color:var(--selection-color);
+}
+
+select,
+summary,
+input:is(
+[type="radio"],
+[type="range"],
+[type="file"]){
+  -webkit-tap-highlight-color:transparent;
+}
