--- a/docs/components/switch.html
+++ b/docs/components/switch.html
@@ -4,6 +4,13 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <ul>
+    <li><a href="#icon">ui-icon</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). Must be set manually.</p>
   <p>checked - reactive (required). Default: false. Controls the checked state of the component.</p>
@@ -57,6 +64,38 @@
 &lt;ui-switch disabled&gt;&lt;/ui-switch&gt;
 </code></pre>
 
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Size: small | medium (default) | large</div>
+    <div class="example">
+      <div class="example-preview">
+        <ui-switch checked data-size="small"></ui-switch>
+        <ui-switch checked data-size="medium"></ui-switch>
+        <ui-switch checked data-size="large"></ui-switch>
+      </div>
+      <div class="example-code">
+<pre><code>
+&lt;ui-switch data-size="small"&gt;&lt;/ui-switch&gt;
+&lt;ui-switch data-size="medium"&gt;&lt;/ui-switch&gt;
+&lt;ui-switch data-size="large"&gt;&lt;/ui-switch&gt;
+</code></pre>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Rounded: none</div>
+    <div class="example">
+      <div class="example-preview">
+        <ui-switch checked data-rounded="none"></ui-switch>
+      </div>
+      <div class="example-code">
+<pre><code>
+&lt;ui-switch data-rounded="none"&gt;&lt;/ui-switch&gt;
+</code></pre>
       </div>
     </div>
   </div>
