--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -4,6 +4,13 @@
 </div>
 
 <div>
+  <h2>Dependencies</h2>
+  <ul>
+    <li><a href="#icon">ui-icon</a></li>
+  </ul>
+</div>
+
+<div>
   <h2>Attributes</h2>
   <p>aria-label - static (required). If used outside of the <a href="#field">ui-field</a> component, the aria-label must be set manually.</p>
   <p>disabled - reactive (optional). Default: false. Controls the disabled state of the component.</p>
@@ -103,7 +110,5 @@
       </div>
     </div>
   </div>
-
-
 
 </section>
