--- a/ui/styles/components.css
+++ b/ui/styles/components.css
@@ -1,17 +1,26 @@
-@import '../components/button/button.css';
+/* native */
 @import '../components/link/link.css';
+
+/* primitives */
+@import '../components/icon/icon.css';
+@import '../components/separator/separator.css';
+@import '../components/spinner/spinner.css';
+
+/* forms */
+@import '../components/button/button.css';
+@import '../components/checkbox/checkbox.css';
+@import '../components/switch/switch.css';
+@import '../components/select/select.css';
+@import '../components/input/input.css';
+@import '../components/textarea/textarea.css';
+@import '../components/field/field.css';
+
+/* components */
 @import '../components/accordion/accordion.css';
 @import '../components/alert/alert.css';
 @import '../components/breadcrumb/breadcrumb.css';
-@import '../components/checkbox/checkbox.css';
-@import '../components/separator/separator.css';
-@import '../components/field/field.css';
-@import '../components/focus/focus.css';
-@import '../components/icon/icon.css';
-@import '../components/input/input.css';
-@import '../components/portal/portal.css';
-@import '../components/select/select.css';
-@import '../components/spinner/spinner.css';
-@import '../components/switch/switch.css';
 @import '../components/tabs/tabs.css';
-@import '../components/textarea/textarea.css';
+
+/* utilities */
+@import '../components/focus/focus.css';
+@import '../components/portal/portal.css';
