--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -11,9 +11,9 @@
   --size-3x-large:4.5rem;
 
   /* checkbox | switch | radio */
-  --control-choice-small:1rem;
-  --control-choice-medium:1.25rem;
-  --control-choice-large:1.5rem;
+  --control-choice-small:round(calc(1rem * var(--scaling)),2px);
+  --control-choice-medium:round(calc(1.25rem * var(--scaling)),2px);
+  --control-choice-large:round(calc(1.5rem * var(--scaling)),2px);
 
   /* button */
   --control-action-small:2rem;
@@ -53,13 +53,19 @@
   --outline-focus-style:solid;
   --outline-focus-offset:2px;
 
+  /* cursor */
   --cursor-default:default;
+  --cursor-interactive:pointer;
   --cursor-disabled:not-allowed;
-  --cursor-action:pointer;
-}
 
-[data-rounded="full"]{border-radius:var(--rounded-full);}
-[data-rounded="none"]{border-radius:var(--rounded-none);}
+  /* link */
+  --decoration-line:underline;
+  --decoration-style:dashed;
+  --decoration-thickness:1px;
+
+  /* underline offset */
+  --underline-offset:0.2rem;
+}
 
 *,::before,::after{box-sizing:border-box;}
 
@@ -69,7 +75,7 @@ html,body{
 }
 
 body{
-  font-family:var(--font-family-default);
+  font-family:var(--font-family-body);
   font-size:var(--font-size-default);
   font-weight:var(--font-weight-normal);
   font-style:var(--font-style-normal);
@@ -139,7 +145,6 @@ code{
 }
 
 table{
-  width:100%;
   border:none;
   border-collapse:collapse;
   border-spacing:0;
@@ -158,7 +163,7 @@ em{
 
 u{
   text-decoration-line:underline;
-  text-underline-offset:var(--text-underline-offset-default);
+  text-underline-offset:var(--underline-offset);
 }
 
 s{
@@ -166,14 +171,13 @@ s{
 }
 
 blockquote{
-  margin-block:1rem;
-  padding:1rem;
+  margin:0;
+  padding:0;
   font-style:var(--font-style-italic);
 }
 
 ul,ol{
-  padding:0;
-  margin-block:1rem;
+  margin:0;
   padding-inline-start:2rem;
 }
 
@@ -254,4 +258,38 @@ input:is(
 [type="range"],
 [type="file"]){
   -webkit-tap-highlight-color:transparent;
+}
+
+/* forms */
+input[type="checkbox"]{
+  --checkbox-cursor:var(--cursor-interactive);
+  appearance:none;
+  margin:0;
+  padding:0;
+  background:none;
+  border:none;
+
+  cursor:var(--checkbox-cursor);
+  user-select:none;
+  touch-action:manipulation;
+  -webkit-tap-highlight-color:transparent;
+
+  transition-duration:var(--duration-default);
+  transition-property:outline-color;
+
+  &::before{
+    pointer-events:none;
+    content:'';
+    position:absolute;
+    width:inherit;
+    height:inherit;
+    border-radius:inherit;
+    border-width:1px;
+    border-style:solid;
+    border-color:var(--border-color);
+  }
+
+  &:disabled{
+    --checkbox-cursor:var(--cursor-disabled);
+  }
 }
