--- a/docs/components/button.html
+++ b/docs/components/button.html
@@ -101,10 +101,11 @@
   </div>
 
   <div class="content-item">
-    <div>Colors: neutral (default), blue, green, yellow, red.</div>
+    <div>Colors: neutral (default), white, blue, green, yellow, red.</div>
     <div class="example">
       <div class="example-preview">
         <button data-color="neutral">Button</button>
+        <button data-color="white">Button</button>
         <button data-color="blue">Button</button>
         <button data-color="green">Button</button>
         <button data-color="yellow">Button</button>
