--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -16,9 +16,7 @@
     <div>Default</div>
     <div class="example">
       <div class="example-preview">
-        <ui-textarea>
-          <textarea></textarea>
-        </ui-textarea>
+        <ui-textarea></ui-textarea>
       </div>
       <div class="example-code">
 <pre><code>
@@ -29,21 +27,14 @@
   </div>
 
   <div class="content-item">
-    <div>Shape</div>
+    <div>Rounded</div>
     <div class="example">
       <div class="example-preview">
-        <ui-textarea>
-          <textarea></textarea>
-        </ui-textarea>
-        <ui-textarea shape="square">
-          <textarea></textarea>
-        </ui-textarea>
+        <ui-textarea rounded="none"></ui-textarea>
       </div>
       <div class="example-code">
 <pre><code>
-&lt;ui-textarea&gt;&lt;/ui-textarea&gt;
-
-&lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;
+&lt;ui-textarea rounded="none"&gt;&lt;/ui-textarea&gt;
 </code></pre>
       </div>
     </div>
@@ -53,9 +44,7 @@
     <div>Required</div>
     <div class="example">
       <div class="example-preview">
-        <ui-textarea>
-          <textarea required></textarea>
-        </ui-textarea>
+        <ui-textarea required></ui-textarea>
       </div>
       <div class="example-code">
 <pre><code>
@@ -85,15 +74,11 @@
     <div>Disabled + Placeholder</div>
     <div class="example">
       <div class="example-preview">
-        <ui-textarea>
-          <textarea placeholder="Disabled" disabled></textarea>
-        </ui-textarea>
+        <ui-textarea placeholder="Disabled" disabled></ui-textarea>
       </div>
       <div class="example-code">
 <pre><code>
-&lt;ui-textarea placeholder="Disabled"&gt;
-  &lt;textarea disabled&gt;&lt;/textarea&gt;
-&lt;/ui-textarea&gt;
+&lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
 </code></pre>
       </div>
     </div>
