--- a/ui/styles/components.css
+++ b/ui/styles/components.css
@@ -10,6 +10,7 @@
 @import '../components/button/button.css';
 @import '../components/checkbox/checkbox.css';
 @import '../components/switch/switch.css';
+@import '../components/radio/radio.css';
 @import '../components/select/select.css';
 @import '../components/input/input.css';
 @import '../components/textarea/textarea.css';
