--- a/assets/app.css
+++ b/assets/app.css
@@ -148,6 +148,7 @@ table :is(th,td){
   & > .example-preview{
     display:flex;
     flex-wrap:wrap;
+    align-items:center;
     gap:20px;
     border-bottom:1px solid var(--line-color);
     overflow-x:auto;
