--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -190,21 +190,6 @@ summary{
   touch-action:manipulation;
 }
 
-select{
-  cursor:pointer;
-}
-
-label{
-  display:flex;
-  column-gap:1rem;
-  cursor:pointer;
-
-  &[for]{
-    touch-action:manipulation;
-    -webkit-tap-highlight-color:transparent;
-  }
-}
-
 img,picture,video,canvas,svg,iframe{
   display:block;
   max-width:100%;
@@ -245,7 +230,21 @@ input:is(
 }
 
 /* forms */
-input:is([type="checkbox"],[type="radio"]){
+label{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+  cursor:var(--cursor-interactive);
+
+  touch-action:manipulation;
+  -webkit-tap-highlight-color:transparent;
+}
+
+select{
+  cursor:var(--cursor-interactive);
+}
+
+input:is([type="checkbox"]){
   appearance:none;
   margin:0;
   padding:0;
